--- a/src/main/resources/assets/structureful/lang/en_us.json
+++ b/src/main/resources/assets/structureful/lang/en_us.json
@@ -18,6 +18,7 @@
   "tooltips.structureful.volcanic_shard": "§4❗§r Drops from volcanic netherrack when its active.",
   "tooltips.structureful.volcanic_netherrack": "§4❗§r Сan be found on top of volcanoes.",
   "tooltips.structureful.blaze_staff": "§4❗§r Shoots three small fireballs.",
+  "tooltips.structureful.volcanic_lantern": "§4❗§r Applies §eFury§r effect in a 15 block radius.",
 
   "effect.structureful.fury": "Fury",
 
