added Dragon Heart

--- a/src/main/resources/assets/structureful/lang/en_us.json
+++ b/src/main/resources/assets/structureful/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.structureful.volcanic_core": "Volcanic Core",
   "item.structureful.heavy_sword": "Heavy Sword",
   "item.structureful.blaze_staff": "Blaze Staff",
+  "item.structureful.dragon_heart": "Dragon Heart",
 
   "block.structureful.meteoric_iron_block": "Meteoric Iron Block",
   "block.structureful.meteoric_iron_ore": "Meteoric Iron Ore",
